[project]
  name = "pulumi_cloudflare"
  description = "A Pulumi package for creating and managing Cloudflare cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.134.1,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "cloudflare"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "5.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.io"
    Repository = "https://github.com/pulumi/pulumi-cloudflare"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_cloudflare = ["py.typed", "pulumi-plugin.json"]
